name:                servant-util
version:             0.3.1.14.14
-- synopsis:
-- description:
homepage:            https://github.com/reouno/servant-util#readme
license:             BSD3
license-file:        LICENSE
author:              UNO Leo
maintainer:          leouno12@gmail.com
copyright:           2019 UNO Leo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ServantUtil
                     , ServantUtil.Api
                     , ServantUtil.Handler
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reouno/servant-util
